tests/negative/neg_pr118i_cross_enum_compare.safe
package neg_pr118i_cross_enum_compare

   type color is (red, green, blue)
   type size is (small, medium, large)

   same : boolean = red == small
